--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="utf-8">
     <title>Float-WP</title>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://kit.fontawesome.com/b21a2b1391.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="page">
       <!-- Header -->
       <div id="header-principale">
         <header>
-          <div class="box-header"></div>
+          <div class="box-header">
+            <img src="img/logo.png" alt="natural">
+            <h1>another awful disorganic theme</h1>
+          </div>
           <div class="menu"></div>
         </header>
       </div>
@@ -37,9 +41,10 @@
 
         </main>
       </div>
-      
+
       <!-- Footer -->
       <footer></footer>
     </div>
+
   </body>
 </html>
