--- a/index.html
+++ b/index.html
@@ -15,7 +15,17 @@
             <img src="img/logo.png" alt="natural">
             <h1>another awful disorganic theme</h1>
           </div>
-          <div class="menu"></div>
+          <div class="menu">
+            <ul class="items">
+              <li><a href="#">home</a></li>
+              <li><a href="#">about</a></li>
+              <li><a href="#">page templates</a></li>
+              <li><a href="#">a parent page</a></li>
+              <li><a href="#">features</a></li>
+              <li><a href="#">blog</a></li>
+              <li><a href="#">contact</a></li>
+            </ul>
+          </div>
         </header>
       </div>
 
