--- a/index.html
+++ b/index.html
@@ -17,13 +17,27 @@
           </div>
           <div class="menu">
             <ul class="items">
-              <li><a href="#">home</a></li>
-              <li><a href="#">about</a></li>
-              <li><a href="#">page templates</a></li>
-              <li><a href="#">a parent page</a></li>
-              <li><a href="#">features</a></li>
-              <li><a href="#">blog</a></li>
-              <li><a href="#">contact</a></li>
+              <li>
+                <a href="#">home</a>
+              </li>
+              <li>
+                <a href="#">about</a>
+              </li>
+              <li>
+                <a href="#">page templates</a>
+              </li>
+              <li>
+                <a href="#">a parent page</a>
+              </li>
+              <li>
+                <a href="#">features</a>
+              </li>
+              <li>
+                <a href="#">blog</a>
+              </li>
+              <li>
+                <a href="#">contact</a>
+              </li>
             </ul>
           </div>
         </header>
@@ -34,19 +48,49 @@
         <main>
           <!-- Colonna sinistra -->
           <div class="colonna">
-            <aside class="aside"></aside>
+            <aside class="aside">
+              <h2>Awful content through the years</h2>
+              <ul>
+                <li>
+                  <a href="#">How to pick the worst possible theme</a>
+                </li>
+                <li>
+                  <a href="#">Transform something awful into something even more awful</a>
+                </li>
+                <li>
+                  <a href="#">Destroying your credibility over the web</a>
+                </li>
+                <li>
+                  <a href="#">Choose your avatar: worst practices</a>
+                </li>
+              </ul>
+            </aside>
           </div>
 
           <!-- Colonna centrale -->
           <div class="colonna">
-            <article class="articolo"></article>
+            <article class="articolo">
+              <h2>article title</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            </article>
           </div>
 
           <!-- Colonna destra -->
           <div class="colonna">
-            <div class="box-right"></div>
-            <div class="box-right"></div>
-            <div class="box-right"></div>
+            <div class="box-right">
+              <h2>text widget</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="box-right">
+              <h2>text widget</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
+            <div class="box-right">
+              <h2>text widget</h2>
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+            </div>
           </div>
 
         </main>
