--- a/index.html
+++ b/index.html
@@ -44,12 +44,15 @@
       </div>
 
       <!-- Contenuto principale -->
-      <div id="main-wrap">
+      <div id="main-wrap" class="clearfix">
         <main>
           <!-- Colonna sinistra -->
           <div class="colonna">
             <aside class="aside">
-              <h2>Awful content through the years</h2>
+              <div id="aside-title" class="clearfix">
+                <i class="fas fa-rss-square"></i>
+                <h2>awful content</h2>
+              </div>
               <ul>
                 <li>
                   <a href="#">How to pick the worst possible theme</a>
@@ -79,16 +82,16 @@
 
           <!-- Colonna destra -->
           <div class="colonna">
-            <div class="box-right">
-              <h2>text widget</h2>
+            <div class="box-right 1">
+              <h2>text widget 1</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div class="box-right">
-              <h2>text widget</h2>
+            <div class="box-right 2">
+              <h2>text widget 2</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
-            <div class="box-right">
-              <h2>text widget</h2>
+            <div class="box-right 3">
+              <h2>text widget 3</h2>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
             </div>
           </div>
