--- a/index.html
+++ b/index.html
@@ -100,7 +100,17 @@
       </div>
 
       <!-- Footer -->
-      <footer></footer>
+      <footer>
+        <span class="powered">Powered by Poorly Creative Studio</span>
+        <hr>
+        <div class="social-icons">
+          <ul class="social-list clearfix">
+            <li><a href="https://www.facebook.com"><i class="fab fa-facebook-square"></i></a></li>
+            <li><a href="https://www.instagram.com/"><i class="fab fa-instagram"></i></a></li>
+            <li><a href="https://github.com/"><i class="fab fa-github"></i></a></li>
+          </ul>
+        </div>
+      </footer>
     </div>
 
   </body>
